Revision history for Perl extension Module::Build.

0.33_01 - 

 Bug-fixes:
 - Fixed RT#42724: consolidated VMS fixes [patch by CBERRY]

0.33 - Sun May  3 20:16:34 PDT 2009

 Bug-fixes:
 - Fixed RT#45462: Compat.pm needs to reference 'Build.com' on VMS
   [patch from John Malmberg]
 - Fixed RT#45461: ext.t on VMS [patch from John Malmberg]
 - Fixed RT#43861: Module::Build::PPMMaker has broken PPD name
   versioning for v5.10+

0.32_01 - Tue Apr 14 17:14:22 PDT 2009

 Bug-fixes:
 - Module::Build::Compat had stopped adding "PL_FILES => {}" when no
   PL_files property was set in Build.PL; restored old behavior and fixed
   tests and documentation related to this issue [David Golden]
 - Caches ExtUtils::CBuilder object in a temporary stash instead of properties 
 - Fixed undef resources->license in META.yml (RT #44453).
 - Use $^X instead of 'perl' in t/ext.t [David Golden] (RT #43485)

 Other:
 - Generated META.yml will indicate version 1.4 of the specification
   (RT #37478) [patch from Alexandr Ciornii]
 - Archive::Tar now the default for generating tarballs on all platforms
   (avoids problems with incompatible tar binaries)
 - dist_dir() now uses dist_name() and dist_version() accessors rather
   than using its properties directly. [brian d foy] (RT #45038)
   
0.32 - Wed Feb 25 17:40:02 PST 2009

 No changes since 0.31_04.

0.31_04 - Fri Feb 20 11:04:59 PST 2009

 Other
 - Bumped Test::Harness prereq to 3.16 for latest PERL5LIB fixes (solves
   test failures when installing Module::Build using CPANPLUS::Dist::Build)
   [David Golden]

0.31_03 - Sun Feb  8 14:54:01 PST 2009

 Enhancements
 - added a "prereq_data" action that prints a Perl data structure of
   all prerequisites; can be loaded by external tools using eval()
   [David Golden]

 Bug-fixes
 - 'fakeinstall' action warns and skips without ExtUtils::Install 1.32+
   [David Golden, reported by Zefram]
 - allows Module::Build version mismatch when installing self; works around